tests/error/testcaseErroSomaTiposDiferentes.g
int main() {
    int x;
    car c;
    x = x + c; /* Erro: int + char */
    retorne x;
}